Japan Language label alignment fixed

--- a/www/css/register.css
+++ b/www/css/register.css
@@ -222,6 +222,7 @@ padding-top:5px;
 
 @media handheld, only screen and (max-width: 767px) {
 body #register_holder fieldset input, body #register_holder fieldset select { width:100%;}
+#container  .top-page-text {padding-left: 1.5%;}
  }
  
  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px){
@@ -231,6 +232,4 @@ body #register_holder fieldset input, body #register_holder fieldset select { wi
   /* For landscape layouts only */
 }
 
-
-
- 
+.top-page-text {padding-left: 11%;  display: block;  padding-bottom: 20px; color:#85a095;}
